# agentreflect

./: .gitignore  LICENSE  README.md  pyproject.toml
agentreflect/: __init__.py  __main__.py  cli.py  config.py  evaluator.py  llm.py  parser.py  prompt.py  reflect.py  report.py  storage.py
reports/: 003-day3-en.md  003-day3-zh.md  004-day4-en.md  004-day4-zh.md  005-day5-en.md  005-day5-zh.md  006-day6-en.md  006-day6-zh.md  008-day8-en.md  008-day8-zh.md  009-day9-en.md  009-day9-zh.md
